[metadata]
name = is_probably_hash
version = 0.1.0
author = Yogi Saputro
author_email = yogisaputro@outlook.com
description = My awesome CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yogski/is_probably_hash
license = MIT

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    is_probably_hash = is_probably_hash.main:hello
